deploy: 33030200083fca50944a2fe31e23bed9f6afcb16

--- a/index.html
+++ b/index.html
@@ -13,16 +13,22 @@
 <main>
     <a href="/">home</a>
     <a href="/colophon">/colophon</a>
-    <h2>glyph</h2>
+    <h2>Glyph</h2>
 <ul>
 <p><li>
-<a href="/posts/why/">Why I am making this subsite</a><span> October 24, 2023</span>
+<a href="/posts/skyroads/">Skyroads</a><span> October 24, 2023</span>
 </li></p>
 <p><li>
-<a href="/posts/test-links/">Test Links</a><span> October 23, 2023</span>
+<a href="/posts/nanowrimo-biking/">Biking in the rain</a><span> October 23, 2023</span>
 </li></p>
 <p><li>
-<a href="/posts/hello-world/">Hello World</a><span> October 23, 2023</span>
+<a href="/posts/why/">Why I am making this subsite</a><span> October 22, 2023</span>
+</li></p>
+<p><li>
+<a href="/posts/test-links/">Test Links</a><span> October 21, 2023</span>
+</li></p>
+<p><li>
+<a href="/posts/hello-world/">Hello World</a><span> October 20, 2023</span>
 </li></p>
 </ul>
 
