deploy: b88638d40dc48c5d293a021756108232aec4caff

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <h2>Glyph</h2>
 <ul>
 <p><li>
+<a href="/posts/add-code-styles/">Add code styles</a><span> October 25, 2023</span>
+</li></p>
+<p><li>
 <a href="/posts/skyroads/">Skyroads</a><span> October 24, 2023</span>
 </li></p>
 <p><li>
