deploy: ad94290464bc1a3989fbec28da433554eed738d7

--- a/index.html
+++ b/index.html
@@ -1,40 +1,57 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A little subsite in the lower Discworld">
+    <meta name="keywords" content="Parth Shiralkar">
+    <meta name="author" content="Parth Shiralkar">
+
+    <!-- Add other essential meta tags for SEO, like Open Graph and Twitter Card tags -->
+
     <title>glyph</title>
-    <link rel="stylesheet" href="/css/styles.css"/>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
 <header>
-    <h1><a href="/">temporal harmony harden</a></h1>
-
-    <h4 class="important-text">a simple domain</h4>
+    <h1><a href="/" title="Home">temporal harmony garden</a></h1>
+    <h2 class="subheadline">a simple domain</h2>
 </header>
 <main>
-    <a href="/">home</a>
-    <a href="/colophon">/colophon</a>
-    <h2>Glyph</h2>
+    <nav>
+        <ul>
+            <li><a href="/" title="Home">home</a></li>
+            <li><a href="/colophon" title="Colophon">/colophon</a></li>
+        </ul>
+    </nav>
+
+    <article>
+        <h2>Glyph</h2>
 <ul>
-<p><li>
-<a href="/posts/add-code-styles/">Add code styles</a><span> October 25, 2023</span>
-</li></p>
-<p><li>
-<a href="/posts/skyroads/">Skyroads</a><span> October 24, 2023</span>
-</li></p>
-<p><li>
-<a href="/posts/nanowrimo-biking/">Biking in the rain</a><span> October 23, 2023</span>
-</li></p>
-<p><li>
-<a href="/posts/why/">Why I am making this subsite</a><span> October 22, 2023</span>
-</li></p>
-<p><li>
-<a href="/posts/test-links/">Test Links</a><span> October 21, 2023</span>
-</li></p>
-<p><li>
-<a href="/posts/hello-world/">Hello World</a><span> October 20, 2023</span>
-</li></p>
+    <li>
+            <a href="/posts/gh-pages-stuff/">Github Pages pitfall</a><span> October 25, 2023</span>
+        </li>
+    <li>
+            <a href="/posts/add-code-styles/">Add code styles</a><span> October 25, 2023</span>
+        </li>
+    <li>
+            <a href="/posts/skyroads/">Skyroads</a><span> October 24, 2023</span>
+        </li>
+    <li>
+            <a href="/posts/nanowrimo-biking/">Biking in the rain</a><span> October 23, 2023</span>
+        </li>
+    <li>
+            <a href="/posts/why/">Why I am making this subsite</a><span> October 22, 2023</span>
+        </li>
+    <li>
+            <a href="/posts/test-links/">Test Links</a><span> October 21, 2023</span>
+        </li>
+    <li>
+            <a href="/posts/hello-world/">Hello World</a><span> October 20, 2023</span>
+        </li>
 </ul>
 
+    </article>
 </main>
 <footer>
     <p>&copy; 2023 <a href="https://parth.ninja" target="_blank">Parth Shiralkar</a></p>
