deploy: e2f3a670c3aa5cd90fe78641503ffd09eadc954f

--- a/colophon/index.html
+++ b/colophon/index.html
@@ -33,7 +33,9 @@
 </blockquote>
 <p>What we have here is simply a smaller, simpler domain for me to pour a beaker or two of energy into.</p>
 <p>The site is, of course, built via <a href="https://www.11ty.dev/">Eleventy</a> and hosted on <a href="https://pages.github.com/">Github Pages</a>.</p>
-<p>The font face is <a href="https://levien.com/type/myfonts/inconsolata.html">Inconsolata</a>, a beautiful monospace font by Raph Levien.</p>
+<p>The monospace font stack is as follows:</p>
+<pre><code class="language-css">Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, Andale Mono WT, Andale Mono, Lucida Sans Typewriter, DejaVu Sans Mono, Bitstream Vera Sans Mono, Nimbus Mono L, Courier, monospace;
+</code></pre>
 <p>The design and layout of this site is directly inspired by many personal sites of the older internet.</p>
 <p>I am a little young, but I am fond of the older web.
 And there are many sites like it, but this one is mine.</p>
