--- a/index.html
+++ b/index.html
@@ -29,27 +29,30 @@
         <h2>Glyph</h2>
 <ul>
     <li>
-            <a href="/posts/gh-pages-stuff/">Github Pages pitfall</a><span> October 25, 2023</span>
+            <a href="/posts/gh-pages-stuff/" title="go to post">Github Pages pitfall</a><span> October 25, 2023</span>
         </li>
     <li>
-            <a href="/posts/add-code-styles/">Add code styles</a><span> October 25, 2023</span>
+            <a href="/posts/add-code-styles/" title="go to post">Add code styles</a><span> October 25, 2023</span>
         </li>
     <li>
-            <a href="/posts/skyroads/">Skyroads</a><span> October 24, 2023</span>
+            <a href="/posts/skyroads/" title="go to post">Skyroads</a><span> October 24, 2023</span>
         </li>
     <li>
-            <a href="/posts/nanowrimo-biking/">Biking in the rain</a><span> October 23, 2023</span>
+            <a href="/posts/nanowrimo-biking/" title="go to post">Biking in the rain</a><span> October 23, 2023</span>
         </li>
     <li>
-            <a href="/posts/why/">Why I am making this subsite</a><span> October 22, 2023</span>
+            <a href="/posts/why/" title="go to post">Why I am making this subsite</a><span> October 22, 2023</span>
         </li>
     <li>
-            <a href="/posts/test-links/">Test Links</a><span> October 21, 2023</span>
+            <a href="/posts/test-links/" title="go to post">Test Links</a><span> October 21, 2023</span>
         </li>
     <li>
-            <a href="/posts/hello-world/">Hello World</a><span> October 20, 2023</span>
+            <a href="/posts/hello-world/" title="go to post">Hello World</a><span> October 20, 2023</span>
         </li>
 </ul>
+<blockquote>
+<h3>It’s still magic even if you know how it’s done.</h3>
+</blockquote>
 
     </article>
 </main>
