deploy: 0ef75a0f89df64ace098e23fa5ea250a47453ef3

--- a/colophon/index.html
+++ b/colophon/index.html
@@ -28,15 +28,23 @@
 
     <article>
         <h2>colophon</h2>
+<h3>What is this?</h3>
+<p><strong>Colophon</strong> (n): A statement at the end of a book or document providing information about its production, such as the publication date, authorship, and printing details.</p>
+<h3>Why is this?</h3>
 <p>This site came about as a direct result of a small train of thought I let my mind loose on; on a Monday of all days, Jeeves, my goodness.</p>
 <blockquote>
 <p>Pah.</p>
 </blockquote>
 <p>What we have here is simply a smaller, simpler domain for me to pour a beaker or two of energy into.</p>
+<blockquote>
+<p>The quote on the main page is by Terry Pratchett, one of my favourite authors.</p>
+</blockquote>
+<h3>Tech</h3>
 <p>The site is, of course, built via <a href="https://www.11ty.dev/">Eleventy</a> and hosted on <a href="https://pages.github.com/">Github Pages</a>.</p>
 <p>The monospace font stack is as follows:</p>
 <pre><code class="language-css">Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, Andale Mono WT, Andale Mono, Lucida Sans Typewriter, DejaVu Sans Mono, Bitstream Vera Sans Mono, Nimbus Mono L, Courier, monospace;
 </code></pre>
+<h3>Design</h3>
 <p>The design and layout of this site is directly inspired by many personal sites of the older internet.</p>
 <p>I am a little young, but I am fond of the older web.
 And there are many sites like it, but this one is mine.</p>
