--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
     </nav>
 
     <article>
-        <h2>Glyph</h2>
+        <h2>glyph</h2>
 <ul>
+    <li>
+            <a href="/posts/webring-considerations/" title="go to post">Webring Considerations</a><span> October 25, 2023</span>
+        </li>
     <li>
             <a href="/posts/gh-pages-stuff/" title="go to post">Github Pages pitfall</a><span> October 25, 2023</span>
         </li>
