deploy: 4b0db31c13c84f72131f656397b121ced0a36724

--- a/colophon/index.html
+++ b/colophon/index.html
@@ -36,6 +36,7 @@
 <p>Pah.</p>
 </blockquote>
 <p>What we have here is simply a smaller, simpler domain for me to pour a beaker or two of energy into.</p>
+<p><a href="/garden">Read more about the site's conception here.</a></p>
 <blockquote>
 <p>The quote on the main page is by Terry Pratchett, one of my favourite authors.</p>
 </blockquote>
@@ -46,7 +47,7 @@
 </code></pre>
 <h3>Design</h3>
 <p>The design and layout of this site is directly inspired by many personal sites of the older internet.</p>
-<p>I am a little young, but I am fond of the older web.
+<p>I am a little young, but I am fond of the older web.<br>
 And there are many sites like it, but this one is mine.</p>
 <p>There is a light and a dark theme that switches per the user's browser/system preference.</p>
 
