deploy: dd020424253befc83c8ca6558a8f62ed10477ffb

--- a/colophon/index.html
+++ b/colophon/index.html
@@ -48,10 +48,6 @@
 <p>Pah.</p>
 </blockquote>
 <p>What we have here is simply a smaller, simpler domain for me to pour a beaker or two of energy into.</p>
-<p><a href="/garden">Read more about the site's conception here.</a></p>
-<blockquote>
-<p>The quote on the main page is by Terry Pratchett, one of my favourite authors.</p>
-</blockquote>
 <h3>Tech</h3>
 <p>The site is, of course, built via <a href="https://www.11ty.dev/">Eleventy</a> and hosted on <a href="https://pages.github.com/">Github Pages</a>.</p>
 <p>The monospace font stack is as follows:</p>
@@ -62,11 +58,15 @@
 <p>I am a little young, but I am fond of the older web.<br>
 And there are many sites like it, but this one is mine.</p>
 <p>There is a light and a dark theme that switches per the user's browser/system preference.</p>
+<p><a href="/garden">Read more about the site's conception here.</a></p>
+<blockquote>
+<p>The quote on the main page is by Terry Pratchett, one of my favourite authors.</p>
+</blockquote>
 
     </article>
 </main>
 <footer>
-    <p>&copy; 2023 <a href="https://parth.ninja" target="_blank">Parth Shiralkar</a></p>
+    <p>&copy; <a href="https://parth.ninja" target="_blank" title="go to author page">parth shiralkar</a> / <span><a href="/key" title="public key"> public key</a> </span></p>
 </footer>
 </body>
 </html>
