deploy: cb6ed0124399d6442cdc3a68ecff9543621680b8

--- a/404.html
+++ b/404.html
@@ -53,7 +53,7 @@
     </article>
 </main>
 <footer>
-    <p>&copy; <a href="https://parth.ninja" target="_blank" title="go to author page">parth shiralkar</a> / <span><a href="/key" title="public key"> public key</a> </span></p>
+    <p>&copy; <a href="https://parth.ninja" target="_blank" title="go to author page">parth shiralkar</a> | <a href="/key" title="public key"> public key</a></p>
 </footer>
 </body>
 </html>
