--- a/colophon/index.html
+++ b/colophon/index.html
@@ -66,7 +66,7 @@ And there are many sites like it, but this one is mine.</p>
     </article>
 </main>
 <footer>
-    <p>&copy; <a href="https://parth.ninja" target="_blank" title="go to author page">parth shiralkar</a> / <span><a href="/key" title="public key"> public key</a> </span></p>
+    <p>&copy; <a href="https://parth.ninja" target="_blank" title="go to author page">parth shiralkar</a> | <a href="/key" title="public key"> public key</a></p>
 </footer>
 </body>
 </html>
