--- a/cms/index.html
+++ b/cms/index.html
@@ -10,12 +10,15 @@
 <div class="container">
     <h1>Glyph CMS</h1>
     <form id="post-form">
-        <input type="text" id="title" name="title" placeholder="Title" required>
-        <input type="text" id="description" name="description" placeholder="Description" required>
-        <input type="date" id="date" name="date" required>
-        <textarea id="content" name="content" placeholder="Content" required></textarea>
+        <label for="title">Title</label><input type="text" id="title" name="title" placeholder="Title" required>
+        <label for="description">Description</label><input type="text" id="description" name="description" placeholder="Description" required>
+        <label for="date">Date</label><input type="date" id="date" name="date" required>
+        <label for="content">Content</label><textarea id="content" name="content" placeholder="Content" required></textarea>
         <button type="submit">Submit</button>
     </form>
 </div>
+
+<!-- Load script.js -->
+<script src="script.js"></script>
 </body>
 </html>
