deploy: 72d0e34f5d1fc1af19da57f1f2f8ce769d9ca49f

--- a/key/index.html
+++ b/key/index.html
@@ -69,7 +69,7 @@
     </article>
 </main>
 <footer>
-    <p>&copy; <a href="https://parth.ninja" target="_blank" title="go to author page">parth shiralkar, always</a>&nbsp;<a href="#" class="top-link" title="go to top">⬆</a></p>
+    <p>&copy; <a href="https://parth.ninja" target="_blank" title="go to author page">parth shiralkar</a></p><p><a href="#" class="top-link" title="go to top">⬆</a></p>
 
 
 </footer>
