--- a/404.html
+++ b/404.html
@@ -41,20 +41,21 @@
 
     <article>
         <h2>Whoops! - Page not found</h2>
-<p>The page you are looking for does not exist. Please check the URL or go to the <a href="/">homepage</a>.</p>
-<br>
-<pre><code class="language-text">██╗  ██╗ ██████╗ ██╗  ██╗
-██║  ██║██╔═████╗██║  ██║
-███████║██║██╔██║███████║
-╚════██║████╔╝██║╚════██║
-     ██║╚██████╔╝     ██║
-     ╚═╝ ╚═════╝      ╚═╝
+<pre><code class="language-text">
+  \\
+   \\_.
+   ( _\
+   / \__
+  / _/`&quot;`
+ {\  )_
+   `&quot;&quot;&quot;`
 </code></pre>
+<p>The page you are looking for does not exist. Please check the URL or go to the <a href="/">homepage</a>.</p>
 
     </article>
 </main>
 <footer>
-    <p>&copy; <a href="https://parth.ninja" target="_blank" title="go to author page">parth shiralkar, always</a>&nbsp;<a href="#" class="top-link" title="go to top">⬆</a></p>
+    <p>&copy; <a href="https://parth.ninja" target="_blank" title="go to author page">parth shiralkar</a></p><p><a href="#" class="top-link" title="go to top">⬆</a></p>
 
 
 </footer>
