--- a/meta/index.html
+++ b/meta/index.html
@@ -71,7 +71,7 @@ It's just a text blog for myself. If it's too raw or too much, please visit the 
     </article>
 </main>
 <footer>
-    <p>&copy; <a href="https://parth.ninja" target="_blank" title="go to author page">parth shiralkar</a></p><p><a href="#" class="top-link" title="go to top">⬆</a></p>
+    <p>&copy; <a href="https://parth.ninja" target="_blank" title="go to author page">parth shiralkar</a></p><p><a href="#" class="top-link" title="go to top">↥</a></p>
 
 
 </footer>
