deploy: 4cb770824b0c86734ba8c233ec6ab26d85a36690

--- a/colophon/index.html
+++ b/colophon/index.html
@@ -87,13 +87,16 @@
 <p>The design and layout of this site is directly inspired by many personal sites of the older internet.</p>
 <p>I am a little young, but I am fond of the older web.<br>
 And there are many sites like it, but this one is mine.</p>
-<p>There is a light and a dark theme that switches per the user's browser/system preference.</p>
 <p>Read more about <a href="/garden">the site's conception here</a>.</p>
 <p>See the <a href="/meta">meta page</a> for more general information about the site.</p>
 <blockquote>
 <p>The quote on the main page is by Terry Pratchett, one of my favourite authors.</p>
 </blockquote>
 
+</div>
+
+<div style="margin-top: 0.8em;">
+<small><a href="/" title="homepage">home</a></small>
 </div>
 
     </article>
