--- a/key/index.html
+++ b/key/index.html
@@ -92,6 +92,10 @@
 
 </div>
 
+<div style="margin-top: 0.8em;">
+<small><a href="/" title="homepage">home</a></small>
+</div>
+
     </article>
 </main>
 <footer>
