--- a/meta/index.html
+++ b/meta/index.html
@@ -89,6 +89,10 @@ I write about things that find me interesting. Not all of it will make sense; th
 
 </div>
 
+<div style="margin-top: 0.8em;">
+<small><a href="/" title="homepage">home</a></small>
+</div>
+
     </article>
 </main>
 <footer>
